Updated SB update method to have an object body instead of array body
